<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activity_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.vijaya.sqlite.EmployeeActivity">

            <TextView
                android:id="@+id/employee_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_title"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstnameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstnameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:hint="@string/employee_first_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lastnameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstnameInputLayout"
                android:hint="@string/employee_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastnameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/employee_last_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dobInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastnameInputLayout"
                android:hint="@string/date_of_birth_e_g_23_04_2016">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/date_of_birth_e_g_23_04_2016"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/jobDescInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dobInputLayout"
                android:hint="@string/job_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jobDescEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/job_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/employedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/jobDescInputLayout"
                android:hint="@string/employed_date_e_g_23_04_2016">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employedEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/employed_date_e_g_23_04_2016"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/employerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/employedInputLayout"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/employer_name"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/employerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/employerTextView" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/employerSpinner"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="30dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/employerSpinner"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:text="@string/search" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/employerSpinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:onClick="delete"
                android:text="@string/delete" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/searchButton" />
        </RelativeLayout>
    </ScrollView>
</layout>